--- a/index.html
+++ b/index.html
@@ -4,144 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/image/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/image/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/image/favicon-16x16.png">
     <link rel="stylesheet" href="./css/style.css">
     <title>Fixture</title>
 </head>
-<body class="bodyMain">
-    <div class="titulo">
-        <h1>FIFA WORLD CUP</h1>
-        <h2>QATAR 2022</h2>
-    </div>
-    <div class="bodyGrupo">
-        <h2 class="tituloGrupo">GRUPO C</h2>
-        <div class="resultadoGrupo">
+<body class="bodyMainIndex">
+    <div class="bodyIndex">
+        <div class="head">
             <div>
-                <div class="equipoLocal">
-                    <h4>Argentina</h4>
-                    <input type="number" min="0" max="9" class="goles">
-                </div>
-                <div class="equipoLocal">
-                    <h4>México</h4>
-                    <input type="number" min="0" max="9" class="goles">
-                </div>
-                <div class="equipoLocal">
-                    <h4>Argentina</h4>
-                    <input type="number" min="0" max="9" class="goles">
-                </div>
-                <div class="equipoLocal">
-                    <h4>Polonia</h4>
-                    <input type="number" min="0" max="9" class="goles">
-                </div>
-                <div class="equipoLocal">
-                    <h4>Polonia</h4>
-                    <input type="number" min="0" max="9" class="goles">
-                </div>
-                <div class="equipoLocal">
-                    <h4>Arabia Saudita</h4>
-                    <input type="number" min="0" max="9" class="goles">
-                </div>
+                <img src="../assets/image/logo-de-qatar (2).png" class="logo" alt="logo">
             </div>
-            <div>
-                <h4 class="guionCentro">-</h4>
-                <h4 class="guionCentro">-</h4>
-                <h4 class="guionCentro">-</h4>
-                <h4 class="guionCentro">-</h4>
-                <h4 class="guionCentro">-</h4>
-                <h4 class="guionCentro">-</h4>
-            </div>
-            <div>
-                <div class="equipoVisitante">
-                    <input type="number" min="0" max="9" class="goles">
-                    <h4>Arabia Saudita</h4>
-                </div>
-                <div class="equipoVisitante">
-                    <input type="number" min="0" max="9" class="goles">
-                    <h4>Polonia</h4>
-                </div>
-                <div class="equipoVisitante">
-                    <input type="number" min="0" max="9" class="goles">
-                    <h4>México</h4>
-                </div>
-                <div class="equipoVisitante">
-                    <input type="number" min="0" max="9" class="goles">
-                    <h4>Arabia Saudita</h4>
-                </div>
-                <div class="equipoVisitante">
-                    <input type="number" min="0" max="9" class="goles">
-                    <h4>Argentina</h4>
-                </div>
-                <div class="equipoVisitante">
-                    <input type="number" min="0" max="9" class="goles">
-                    <h4>México</h4>
-                </div>
-            </div>
-            <div class="simular">
-                <input type="submit" name="simular" id="simular" value="Simular">
+            <div class="titulo">
+                <h1>FIFA WORLD CUP</h1>
+                <h2>QATAR 2022</h2>
             </div>
         </div>
-        <div class="posicionesGrupo">
-            <h2 class="tituloPosiciones">POSICIONES</h2>
-            <table class="tablaPosiciones">
-                <thead>
-                    <tr>
-                        <th>Equipos</th>
-                        <th>Pts</th>
-                        <th>PJ</th>
-                        <th>PG</th>
-                        <th>PE</th>
-                        <th>PP</th>
-                        <th>GF</th>
-                        <th>GC</th>
-                        <th>Dif</th>
-                    </tr>
-                </thead>    
-                <tbody>
-                    <tr>
-                        <td class="nombreEquipo">Argentina</td>
-                        <td class="numTabla pts">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                    </tr>
-                    <tr>
-                        <td class="nombreEquipo">Arabia Saudita</td>
-                        <td class="numTabla pts">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                    </tr>
-                    <tr>
-                        <td class="nombreEquipo">Polonia</td>
-                        <td class="numTabla pts">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                    </tr>
-                    <tr>
-                        <td class="nombreEquipo">México</td>
-                        <td class="numTabla pts">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                        <td class="numTabla">0</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div>
+            <div>
+                <h2 class="tituloIndex">Ingresá tus Datos</h2>
+            </div>
+            <div>
+                <label for="nombreUsuario"><h3>Nombre</h3></label>
+                <input type="text" name="nombre" id="nombreUsuario" placeholder="Lio Messi">
+            </div>
+            <div>
+                <label for="seleccionarPais"><h3>País Favorito</h3></label>
+                <select name="pais" id="seleccionarPais">
+                    <option value="">Argentina</option>
+                    <option value="">Arabia Saudita</option>
+                    <option value="">México</option>
+                    <option value="">Polonia</option>
+                </select>
+            </div>
+            <div>
+                <input type="checkbox" id="check">
+                <label for="check" class="recuerdame">Recuérdame</label>
+            </div>
+            <div>
+                <a href="./pages/grupo-c.html">
+                <input type="submit" name="ingreso" id="btnIngreso" value="Ingresar"></a>
+            </div>
         </div>
     </div>
     <script src="./js/main.js"></script>  
