--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="bodyIndex">
         <div class="head">
             <div>
-                <img src="../assets/image/logo-de-qatar (2).png" class="logo" alt="logo">
+                <img src="./assets/image/logo-de-qatar (2).png" class="logo" alt="logo">
             </div>
             <div class="titulo">
                 <h1>FIFA WORLD CUP</h1>
